# oresat-ax5043-driver

./: .gitignore  Cargo.toml  README.md  runner.sh
.cargo/: config.toml  runner.sh
.github/workflows/: ci.yml
ax5043/: Cargo.toml
ax5043/debian/: lband.service  uhf.service
ax5043/examples/: c3-uhf-carrier.toml  carrier.rs  config_rpi.rs  dump.rs  ground.rs  lband-ground.rs  lband.rs  lband_rx.rs  off.rs  roundtrip.rs  rpi-lband-60000.toml  rpi-uhf-60000.toml  rpi-uhf-96000.toml  rpi-uhf-carrier.toml  rx.rs  satellite.rs  simple.rs  state.rs  toml.rs  tui.rs  tuitx.rs  tx.rs  uhf-ground.rs  uhf.rs  uhf_rx.rs
ax5043/src/: config.rs  config_rpi.rs  fifo.rs  lib.rs  registers.rs  tui.rs
ax5043/src/config/: board.rs  channel.rs  mod.rs  rpi.rs  synth.rs
ax5043_derive/: Cargo.toml
ax5043_derive/src/: lib.rs
