[package]
name = "ax5043"
version = "0.2.3"
authors = ["Theo Hill <Theo0x48@gmail.com>"]
edition = "2021"
description = "C3 UHF/LBand AX5043 driver"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bitflags = { version = "2.5.0", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
crc = "3.0.1"
gpiod = "0.2.3"
mio = { version = "0.8.11", features = ["net", "os-poll", "os-ext"] }
mio-signals = "0.2.0"
num_enum = "0.7.2"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
spidev = "0.6.0"
thiserror = "1.0.58"
timerfd = "1.6.0"

[dev-dependencies]
crossterm = "0.27"
itertools = "0.12.1"
proptest = "1.4.0"
proptest-derive = "0.4.0"

[package.metadata.deb]
maintainer-scripts = "debian/"
# cargo-deb somehow resolves the wrong libc (2.35 currently)
# even though the cross toolchain uses 2.31.
depends = "libc6:armhf (>= 2.31)"
systemd-units = [
    { unit-name = "lband" },
    { unit-name = "uhf" },
]
